# libkrun

./: Cargo.toml
docs/: LOONGARCH_BOOT_CALLCHAIN.md  LOONGARCH_INTERRUPT_ANALYSIS.md  LOONGARCH_PORTING.md  LOONGARCH_SMOKE_TEST.md  LOONGARCH_TROUBLESHOOTING_HISTORY.md
examples/: smoke_kernel.c
init/: init.c
src/arch/: Cargo.toml
src/arch/src/: lib.rs
src/arch/src/loongarch64/: layout.rs  mod.rs
src/arch/src/loongarch64/linux/: efi.rs  iocsr.rs  mod.rs  regs.rs
src/cpuid/: Cargo.toml
src/devices/: Cargo.toml
src/devices/src/: lib.rs
src/devices/src/fdt/: loongarch64.rs
src/devices/src/legacy/: irqchip.rs  kvmloongarchirqchip.rs
src/devices/src/legacy/loongarch64/: serial.rs
src/devices/src/virtio/fs/: fuse.rs  server.rs  worker.rs
src/devices/src/virtio/fs/linux/: passthrough.rs
src/hvf/src/: lib.rs
src/libkrun/: Cargo.toml
src/libkrun/src/: lib.rs
src/utils/: Cargo.toml
src/vmm/: Cargo.toml
src/vmm/src/: builder.rs  lib.rs
src/vmm/src/device_manager/kvm/: mmio.rs
src/vmm/src/linux/: vstate.rs
src/vmm/src/vmm_config/: kernel_cmdline.rs
tests/test_cases/src/: common.rs  test_vm_config.rs
